# iutmafh-agent

./: README.md  RESEARCH.md  WORKBOOK.md  json-template.json  main.py  pyproject.toml  review_prompt.py  review_prompt_1.py  review_prompt_2.py  review_prompt_3.py
art_reviewer_adk/: agent.py
art_reviewer_sdk/: dashboard.py  index.html  review.py  run_workbook.py  server.py
results/: README.md
results/archive/: ART-001.json  ART-001.summary.json  ART-002.json  ART-002.summary.json  ART-003.json  ART-003.summary.json  ART-004.json  ART-004.summary.json  ART-005.json  ART-005.summary.json  dashboard.py  index.html
testing_assets/: workbook.toml
