[project]
name = "iutmafh-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.106.0",
    "fastapi>=0.136.3",
    "google-adk>=2.2.0",
    "google-genai>=2.8.0",
    "litellm>=1.87.1",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly>=6.8.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]

[tool.uv]
exclude-newer = "1 week"
